feat(server): Atpc Placement Details
