# server/gen/go/v1/amizone.pb.gw.go
@@ -265,76 +265,6 @@ func local_request_AmizoneService_GetCurrentCourses_0(ctx context.Context, marsh
 
 }
 
-func request_AmizoneService_GetExamResult_0(ctx context.Context, marshaler runtime.Marshaler, client AmizoneServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq SemesterRef
-	var metadata runtime.ServerMetadata
-
-	var (
-		val string
-		ok  bool
-		err error
-		_   = err
-	)
-
-	val, ok = pathParams["semester_ref"]
-	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "semester_ref")
-	}
-
-	protoReq.SemesterRef, err = runtime.String(val)
-	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "semester_ref", err)
-	}
-
-	msg, err := client.GetExamResult(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func local_request_AmizoneService_GetExamResult_0(ctx context.Context, marshaler runtime.Marshaler, server AmizoneServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq SemesterRef
-	var metadata runtime.ServerMetadata
-
-	var (
-		val string
-		ok  bool
-		err error
-		_   = err
-	)
-
-	val, ok = pathParams["semester_ref"]
-	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "semester_ref")
-	}
-
-	protoReq.SemesterRef, err = runtime.String(val)
-	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "semester_ref", err)
-	}
-
-	msg, err := server.GetExamResult(ctx, &protoReq)
-	return msg, metadata, err
-
-}
-
-func request_AmizoneService_GetCurrentExamResult_0(ctx context.Context, marshaler runtime.Marshaler, client AmizoneServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq EmptyMessage
-	var metadata runtime.ServerMetadata
-
-	msg, err := client.GetCurrentExamResult(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func local_request_AmizoneService_GetCurrentExamResult_0(ctx context.Context, marshaler runtime.Marshaler, server AmizoneServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq EmptyMessage
-	var metadata runtime.ServerMetadata
-
-	msg, err := server.GetCurrentExamResult(ctx, &protoReq)
-	return msg, metadata, err
-
-}
-
 func request_AmizoneService_GetUserProfile_0(ctx context.Context, marshaler runtime.Marshaler, client AmizoneServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq EmptyMessage
 	var metadata runtime.ServerMetadata
@@ -491,6 +421,24 @@ func local_request_AmizoneService_FillFacultyFeedback_0(ctx context.Context, mar
 
 }
 
+func request_AmizoneService_GetAtpcPlacementDetails_0(ctx context.Context, marshaler runtime.Marshaler, client AmizoneServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq EmptyMessage
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.GetAtpcPlacementDetails(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_AmizoneService_GetAtpcPlacementDetails_0(ctx context.Context, marshaler runtime.Marshaler, server AmizoneServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq EmptyMessage
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.GetAtpcPlacementDetails(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterAmizoneServiceHandlerServer registers the http handlers for service AmizoneService to "mux".
 // UnaryRPC     :call AmizoneServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -641,54 +589,6 @@ func RegisterAmizoneServiceHandlerServer(ctx context.Context, mux *runtime.Serve
 
 	})
 
-	mux.Handle("GET", pattern_AmizoneService_GetExamResult_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		var stream runtime.ServerTransportStream
-		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/GetExamResult", runtime.WithHTTPPathPattern("/api/v1/exam_result/{semester_ref}"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := local_request_AmizoneService_GetExamResult_0(ctx, inboundMarshaler, server, req, pathParams)
-		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_AmizoneService_GetExamResult_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
-	mux.Handle("GET", pattern_AmizoneService_GetCurrentExamResult_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		var stream runtime.ServerTransportStream
-		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/GetCurrentExamResult", runtime.WithHTTPPathPattern("/api/v1/exam_result"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := local_request_AmizoneService_GetCurrentExamResult_0(ctx, inboundMarshaler, server, req, pathParams)
-		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_AmizoneService_GetCurrentExamResult_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
 	mux.Handle("GET", pattern_AmizoneService_GetUserProfile_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -806,6 +706,30 @@ func RegisterAmizoneServiceHandlerServer(ctx context.Context, mux *runtime.Serve
 		}
 
 		forward_AmizoneService_FillFacultyFeedback_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_AmizoneService_GetAtpcPlacementDetails_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/GetAtpcPlacementDetails", runtime.WithHTTPPathPattern("/api/v1/atpc/placement"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_AmizoneService_GetAtpcPlacementDetails_0(ctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_AmizoneService_GetAtpcPlacementDetails_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -976,48 +900,6 @@ func RegisterAmizoneServiceHandlerClient(ctx context.Context, mux *runtime.Serve
 
 	})
 
-	mux.Handle("GET", pattern_AmizoneService_GetExamResult_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/GetExamResult", runtime.WithHTTPPathPattern("/api/v1/exam_result/{semester_ref}"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := request_AmizoneService_GetExamResult_0(ctx, inboundMarshaler, client, req, pathParams)
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_AmizoneService_GetExamResult_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
-	mux.Handle("GET", pattern_AmizoneService_GetCurrentExamResult_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		var err error
-		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/GetCurrentExamResult", runtime.WithHTTPPathPattern("/api/v1/exam_result"))
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := request_AmizoneService_GetCurrentExamResult_0(ctx, inboundMarshaler, client, req, pathParams)
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_AmizoneService_GetCurrentExamResult_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
 	mux.Handle("GET", pattern_AmizoneService_GetUserProfile_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -1123,6 +1005,27 @@ func RegisterAmizoneServiceHandlerClient(ctx context.Context, mux *runtime.Serve
 
 	})
 
+	mux.Handle("GET", pattern_AmizoneService_GetAtpcPlacementDetails_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		ctx, err = runtime.AnnotateContext(ctx, mux, req, "/go_amizone.server.proto.v1.AmizoneService/GetAtpcPlacementDetails", runtime.WithHTTPPathPattern("/api/v1/atpc/placement"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_AmizoneService_GetAtpcPlacementDetails_0(ctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_AmizoneService_GetAtpcPlacementDetails_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -1139,10 +1042,6 @@ var (
 
 	pattern_AmizoneService_GetCurrentCourses_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "courses"}, ""))
 
-	pattern_AmizoneService_GetExamResult_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "exam_result", "semester_ref"}, ""))
-
-	pattern_AmizoneService_GetCurrentExamResult_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "exam_result"}, ""))
-
 	pattern_AmizoneService_GetUserProfile_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "user_profile"}, ""))
 
 	pattern_AmizoneService_GetWifiMacInfo_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "wifi_mac"}, ""))
@@ -1152,6 +1051,8 @@ var (
 	pattern_AmizoneService_DeregisterWifiMac_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "wifi_mac", "address"}, ""))
 
 	pattern_AmizoneService_FillFacultyFeedback_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 2, 4}, []string{"api", "v1", "faculty", "feedback", "submit"}, ""))
+
+	pattern_AmizoneService_GetAtpcPlacementDetails_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "v1", "atpc", "placement"}, ""))
 )
 
 var (
@@ -1167,10 +1068,6 @@ var (
 
 	forward_AmizoneService_GetCurrentCourses_0 = runtime.ForwardResponseMessage
 
-	forward_AmizoneService_GetExamResult_0 = runtime.ForwardResponseMessage
-
-	forward_AmizoneService_GetCurrentExamResult_0 = runtime.ForwardResponseMessage
-
 	forward_AmizoneService_GetUserProfile_0 = runtime.ForwardResponseMessage
 
 	forward_AmizoneService_GetWifiMacInfo_0 = runtime.ForwardResponseMessage
@@ -1180,4 +1077,6 @@ var (
 	forward_AmizoneService_DeregisterWifiMac_0 = runtime.ForwardResponseMessage
 
 	forward_AmizoneService_FillFacultyFeedback_0 = runtime.ForwardResponseMessage
+
+	forward_AmizoneService_GetAtpcPlacementDetails_0 = runtime.ForwardResponseMessage
 )
